fixed foooter spacing on home page

--- a/less/index.less
+++ b/less/index.less
@@ -524,8 +524,13 @@ html {
 
 #bottom-wrapper p {
   padding: 1%;
+  padding-left: 15%;
 }
 
+#bottom-wrapper h3 {
+  
+  padding-left: 15%;
+}
 
 // CONTAINER7....XXXXXXXXXXXXXXXXX
 
